# aidoku-zh-sources

./: .deprecated-sources  README.md  build.sh
.github/workflows/: build.yml
public/: index.json  index.min.json
public/sources/: zh.18mh-v1.aix  zh.18mh-v2.aix  zh.bakamh-v2.aix  zh.bakamh-v3.aix  zh.baozimh1-v5.aix  zh.baozimh1-v6.aix  zh.baozimh2-v6.aix  zh.baozimh2-v7.aix  zh.bilicomic-v4.aix  zh.bilicomic-v6.aix  zh.cartoonmad-v2.aix  zh.cartoonmad-v3.aix  zh.copymanga-v12.aix  zh.copymanga-v14.aix  zh.copymanga-v15.aix  zh.godamanga-v10.aix  zh.godamanga-v9.aix  zh.gufengmh-v3.aix  zh.gufengmh-v4.aix  zh.hanime1-v3.aix  zh.hanime1-v4.aix  zh.happymh-v1.aix  zh.happymh-v3.aix  zh.ho5ho-v1.aix  zh.ho5ho-v2.aix  zh.komiic-v3.aix  zh.komiic-v5.aix  zh.manhuabika-v1.aix  zh.manhuabika-v3.aix  zh.manhuadb-v1.aix  zh.manhuadb-v2.aix  zh.manhuaren-v2.aix  zh.manhuaren-v4.aix  zh.manhuaren-v5.aix  zh.mkzhan-v1.aix  zh.mkzhan-v2.aix  zh.msxhm-v6.aix  zh.msxhm-v7.aix  zh.mycomic-v2.aix  zh.mycomic-v3.aix  (+14 more)
src/rust/zh.baozimh1/: Cargo.toml
src/rust/zh.baozimh2/: Cargo.toml
src/rust/zh.copymanga/: Cargo.toml
src/rust/zh.godamanga/: Cargo.toml
src/rust/zh.gufengmh/: Cargo.toml
src/rust/zh.happymh/: Cargo.toml
src/rust/zh.ho5ho/: Cargo.toml
src/rust/zh.komiic/: Cargo.toml
src/rust/zh.manhuaren/: Cargo.toml
src/rust/zh.manhuaren/res/: filters.json  source.json
src/rust/zh.manhuaren/src/: helper.rs  lib.rs  parser.rs
src/rust/zh.yandanshe/: Cargo.toml
src/rust/zh.yandanshe/res/: filters.json  source.json
src/rust/zh.yandanshe/src/: helper.rs  lib.rs
(+102 files in other folders)
