[package]
name = "aidoku-yandanshe"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
strip = true
lto = true

[dependencies]
aidoku = { git = "https://github.com/Aidoku/aidoku-rs", features = ["helpers", "json"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
aes = { version = "0.8", default-features = false }
cbc = { version = "0.1", default-features = false, features = ["alloc"] }
cipher = { version = "0.4", default-features = false, features = ["block-padding"] }
